export const snapshot = {};

snapshot[`isIntersectionOf<T> > returns properly named predicate function 1`] = `"isString"`;

snapshot[`isIntersectionOf<T> > returns properly named predicate function 2`] = `
"isObjectOf({
  a: isNumber,
  b: isString
})"
`;

snapshot[`isIntersectionOf<T> > returns properly named predicate function 3`] = `
"isIntersectionOf([
  isFunction,
  isObjectOf({b: isString})
])"
`;

snapshot[`isIntersectionOf<T> > with symbol properties > returns properly named predicate function 1`] = `"isString"`;

snapshot[`isIntersectionOf<T> > with symbol properties > returns properly named predicate function 2`] = `
"isObjectOf({
  a: isNumber,
  Symbol(b): isString
})"
`;

snapshot[`isIntersectionOf<T> > with symbol properties > returns properly named predicate function 3`] = `
"isIntersectionOf([
  isFunction,
  isObjectOf({Symbol(b): isString})
])"
`;
